@@ -1,3 +1,7 @@
+Nov 22, 2019
+  -for non-rat species: qc checks relaxed and new genes are loaded regardless if sequences are present or not
+       also no sequence checking is performed, so sequences are always updated
+
 Nov 12, 2019
   -fixed spring IOT code (no longer displaying two 'null' lines when the pipeline is starting)
 
